2. Networking/1-Bustbox-dns.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  hostname: my-pod
  subdomain: my-subdomain
  containers:
    - image: k8s.gcr.io/busybox
      name: busybox
      command: [ "sh", "-c"]
      args:
      - sleep 10000
  restartPolicy: Never
