2. Networking/5-WhoAmI-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami-deployment-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami-canary
  template:
    metadata:
      labels:
        app: whoami-canary
    spec:
      containers:
      - name: whoami-container
        image: quay.io/choudeshell/whoami:codemash
