2. Networking/8-Busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-pod
spec:
  containers:
    - image: quay.io/choudeshell/busybox:codemash
      name: busybox
      tty: true
      stdin: true
  restartPolicy: Never
