2. Networking/1-WhoAmiI-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-service
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: whoami
