2. Networking/2-WhoAmI-service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-service2
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: whoami
