2. Networking/4-WhoAmI-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-service-canary
spec:
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: whoami-canary
